--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body {
     font-family: "Poppins", sans-serif; 
+    background-color: #EEEEEE;
 }
 
 html {
@@ -43,6 +44,7 @@ a {
     text-decoration: none;
     text-decoration-color: white;
 }
+
 
 a:hover {
     color: grey;
@@ -357,8 +359,8 @@ article .icon {
 
 .project-img {
     border-radius: 2rem;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 50vh;
 }
 
 .project-title {
